# Projectmind

./: .gitignore  BUILD_SUMMARY.md  CHECKLIST.md  COMPLETE_KNOWLEDGE_SYSTEM_GUIDE.md  DEPLOYMENT_CHECKLIST.md  FEATURE_VERIFICATION.md  INDEX.md  KNOWLEDGE_SYSTEM_COMPLETE.md  KNOWLEDGE_SYSTEM_MANIFEST.md  KNOWLEDGE_SYSTEM_README.md  KNOWLEDGE_SYSTEM_SESSION_SUMMARY.md  KNOWLEDGE_SYSTEM_VISUAL_SUMMARY.md  LICENSE  PHASES_ABC_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_INDEX.md  PHASE_3_SUMMARY.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_QUICK_REFERENCE.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PHASE_5_VERIFICATION.md  PHASE_C_COMPLETION_REPORT.md  PHASE_D_COMPLETION_REPORT.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STATUS_PHASE3.md  README.md  README_SESSION_COMPLETE.md  SYSTEM_COMPLETE.md  compliance_test.md  project_context.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_AND_DECISIONS.md  BUSINESS_CONTEXT.md  COMPLIANCE.md  GETTING_STARTED.md  KNOWLEDGE_SYSTEM_IMPLEMENTATION.md  KNOWLEDGE_SYSTEM_QUICK_REFERENCE.md  NEXT_STEPS_IMPLEMENTATION.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_PLAN.md  TEAM_STANDARDS.md  TIER_2_KNOWLEDGE_SUMMARY.md
projectmind/: __init__.py
tests/: __init__.py  test_audit_log.py  test_cli.py  test_context.py  test_context_integration.py  test_embeddings.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_simple.py  test_phase5_integration.py  test_scanner.py  (+5 more)
(+32 files in other folders)
